--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -28,7 +28,7 @@
             Mantenimientos
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">
+            <li><a class="dropdown-item" th:href="@{/Alumno/frmMantAlumnos}">
               Alumnos</a></li>
           </ul>
         </li>
